--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="w-100 h-75 bg-dark d-flex flex-column align-items-center p-2">
+                    <div class="w-100 h-75 sm-h-100 bg-dark d-flex flex-column align-items-center p-2">
                         <div class="DivRedondo">
                             <img src="img/imagen2021cv.jpg" alt="">
                         </div>
